--- a/index.html
+++ b/index.html
@@ -118,9 +118,13 @@ html,body{margin:0;padding:0;overflow:hidden;background:black;touch-action:none}
  • Tap fast to catch it<br><br>
 
  🐟 <b>Fish Chances</b><br>
- • Clownfish – 25%<br>
- • Tuna – 25%<br>
- • Shark – 50%<br><br>
+ • Clownfish – ~25%<br>
+ • Tuna – ~25%<br>
+ • Shark – ~50%<br>
+ • Pufferfish – 1/3<br>
+ • Sea Turtle – 1/5<br>
+ • Manta Ray – 1/25<br>
+ • Megalodon – 1/50<br><br>
 
  💰 <b>Selling</b><br>
  • Tap fish once to preview<br>
@@ -267,7 +271,15 @@ jump.addEventListener("touchstart",()=>{
 
 /* INVENTORY */
 let money=0;
-const prices={Clownfish:5,Tuna:10,Shark:25};
+const prices={
+  Clownfish:5,
+  Tuna:10,
+  Shark:25,
+  Pufferfish:25,
+  SeaTurtle:50,
+  MantaRay:500,
+  Megalodon:1000
+};
 const inventory=["Rod","","","","","","","",""];
 let selected=0;
 const inv=document.getElementById("inventory");
@@ -291,7 +303,7 @@ function slotTap(i){
  if(inventory[i]==="Rod" || inventory[i]==="Sun Rod"){selected=i;removePreview();renderInv();return;}
  if(inventory[i]==="")return;
  if(now-lastTap<400){
-  money+=prices[inventory[i]]||0;
+  money+=prices[inventory[i].replace(/\s/g,'')]||0;
   inventory[i]="";
   document.getElementById("money").textContent="$"+money;
   removePreview();
@@ -304,7 +316,13 @@ function slotTap(i){
 
 function previewFish(name){
  removePreview();
- const color=name==="Shark"?0x555555:name==="Tuna"?0xaaaaaa:0xff8800;
+ const color=name==="Shark"?0x555555:
+             name==="Tuna"?0xaaaaaa:
+             name==="Clownfish"?0xff8800:
+             name==="Pufferfish"?0xffff00:
+             name==="SeaTurtle"?0x00ffff:
+             name==="MantaRay"?0x00ffcc:
+             0xff0000;
  preview=new THREE.Mesh(
   new THREE.SphereGeometry(.25,16,16),
   new THREE.MeshLambertMaterial({color})
@@ -379,12 +397,18 @@ addEventListener("touchstart",()=>{if(inventory[selected]==="Rod" || inventory[s
 addEventListener("touchend",()=>{holding=false;holdTime=0});
 addEventListener("touchstart",()=>{if(fishing)taps++});
 
+// Random Fish with probabilities
 function randomFish(){
  const r=Math.random();
- if(r<.25)return"Clownfish";
- if(r<.5)return"Tuna";
- return"Shark";
+ if(r<1/50) return "Megalodon";
+ if(r<1/25) return "MantaRay";
+ if(r<1/5) return "SeaTurtle";
+ if(r<1/3) return "Pufferfish";
+ if(r<0.58) return "Tuna";  // remaining probabilities
+ if(r<0.83) return "Clownfish";
+ return "Shark";
 }
+
 function addItem(f){
  for(let i=0;i<inventory.length;i++){
   if(inventory[i]===""){inventory[i]=f;renderInv();return;}
@@ -478,3 +502,4 @@ animate();
 </script>
 </body>
 </html>
+
