--- a/index.html
+++ b/index.html
@@ -286,6 +286,14 @@ const inv=document.getElementById("inventory");
 let lastTap=0;
 let preview=null;
 
+// Helper: Parse item and count
+function parseStack(item){
+  if(!item) return {name:"",count:0};
+  const match = item.match(/^(.+)x(\d+)$/);
+  if(match) return {name:match[1],count:parseInt(match[2])};
+  return {name:item,count:1};
+}
+
 function renderInv(){
  inv.innerHTML="";
  inventory.forEach((it,i)=>{
@@ -300,16 +308,17 @@ renderInv();
 
 function slotTap(i){
  const now=Date.now();
- if(inventory[i]==="Rod" || inventory[i]==="Sun Rod"){selected=i;removePreview();renderInv();return;}
- if(inventory[i]==="")return;
+ const {name,count} = parseStack(inventory[i]);
+ if(name==="Rod" || name==="Sun Rod"){selected=i;removePreview();renderInv();return;}
+ if(!name) return;
  if(now-lastTap<400){
-  money+=prices[inventory[i].replace(/\s/g,'')]||0;
+  money += (prices[name]||0) * count;
   inventory[i]="";
   document.getElementById("money").textContent="$"+money;
   removePreview();
   renderInv();
  }else{
-  previewFish(inventory[i]);
+  previewFish(name);
   lastTap=now;
  }
 }
@@ -322,7 +331,8 @@ function previewFish(name){
              name==="Pufferfish"?0xffff00:
              name==="SeaTurtle"?0x00ffff:
              name==="MantaRay"?0x00ffcc:
-             0xff0000;
+             name==="Megalodon"?0xff0000:
+             0xffffff;
  preview=new THREE.Mesh(
   new THREE.SphereGeometry(.25,16,16),
   new THREE.MeshLambertMaterial({color})
@@ -404,17 +414,28 @@ function randomFish(){
  if(r<1/25) return "MantaRay";
  if(r<1/5) return "SeaTurtle";
  if(r<1/3) return "Pufferfish";
- if(r<0.58) return "Tuna";  // remaining probabilities
+ if(r<0.58) return "Tuna";
  if(r<0.83) return "Clownfish";
  return "Shark";
 }
 
 function addItem(f){
+ // check for stack
  for(let i=0;i<inventory.length;i++){
-  if(inventory[i]===""){inventory[i]=f;renderInv();return;}
+   const {name,count} = parseStack(inventory[i]);
+   if(name===f){
+     inventory[i] = name+"x"+(count+1);
+     renderInv();
+     return;
+   }
+ }
+ // find empty slot
+ for(let i=0;i<inventory.length;i++){
+   if(inventory[i]===""){inventory[i]=f;renderInv();return;}
  }
  alert("Inventory full!");
 }
+
 function startFishing(){
  fishing=true;
  msg.style.display="block";
@@ -502,4 +523,3 @@ animate();
 </script>
 </body>
 </html>
-
